--- a/po/zh-Hant-TW.po
+++ b/po/zh-Hant-TW.po
@@ -1,20 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
+# Language zh-Hant-TW translations for neolith package.
+# Copyright (C) 2022 Free Software Foundation, Inc.
 # This file is distributed under the same license as the neolith package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#  <taedlar@gmail.com>, 2022.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: neolith 0.1.3\n"
 "Report-Msgid-Bugs-To: https://github.com/taedlar/neolith\n"
 "POT-Creation-Date: 2022-10-21 16:07+0800\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-10-21 16:16+0800\n"
+"Last-Translator:  <taedlar@gmail.com>\n"
+"Language-Team: Language zh-Hant-TW\n"
+"Language: zh-Hant-TW\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: lib/lpc/array.c:168
