docs(release): update 1.0.0-alpha.6 release notes (What's New)

--- a/.github/release-drafts/1.0.0-alpha.6.md
+++ b/.github/release-drafts/1.0.0-alpha.6.md
@@ -48,3 +48,14 @@ Changelog (commits since `1.0.0-alpha.5`):
 - Tag: `1.0.0-alpha.6`
 - Target branch: `main` (head)
 - This file is a draft; publish via GitHub Releases when ready.
+
+## What's New
+
+- Consolidated and fixed numerous compiler and format warnings across the codebase, improving build hygiene and reducing noisy diagnostics.
+- Windows build and console improvements: better console type detection, safer line-mode handling, and fixes to Windows IOCP integration.
+- New `lib/async` library and integration: unified async worker/runtime, `async_worker` integration with `port_event_t`, and added timer flags to improve cross-platform I/O and worker coordination.
+- Console automation and testing: added a console testbot (using `pexpect`), improved piped-stdin support, and fixed related unit tests for console workers.
+- Stability and memory fixes: fixed leaked shared strings, ensured proper object destruction during teardown, and cleaned up permanent identifier and IP entry memory handling.
+- Documentation updates: added design docs for `lib/async` and cleaned up `set_eval_limit` docs.
+
+These changes collectively improve cross-platform reliability (especially Windows), reduce runtime leaks, and make developing and testing the driver easier.
